--- a/juego_PPT/app/src/main/res/values/strings.xml
+++ b/juego_PPT/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
 
 
     <!-- Buttons game c -->
-    <string name="btnStartEnd">Empezar</string>
+    <string name="btnStartEnd">Jugar</string>
     <string name="btnStadistics">Estadisticas</string>
 </resources>
