Score successfull and app finished

--- a/juego_PPT/app/src/main/res/values/strings.xml
+++ b/juego_PPT/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
 
     <!-- Buttons game c -->
     <string name="btnStartEnd">Jugar</string>
-    <string name="btnStadistics">Estadisticas</string>
+    <string name="btnReset">Reiniciar</string>
 </resources>
